partman-crypto (31) UNRELEASED; urgency=low

  * blockdev-keygen: Set backup capability to allow the entropy
    dialog to be cancelled.

 -- Max Vozeler <xam@debian.org>  Sun, 04 May 2008 16:32:18 +0200

partman-crypto (30) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Fix loading of additional packages:
    - make crypto_load_udebs() take more than one argument,
    - properly pluralize "packages" in crypto_prepare_method().
  * Remove partman-crypto-{dm,loop} dependency on cdebconf-entropy:
    anna does not handle depencies on virtual package correctly yet.

  [ Updated translations ]
  * Czech (cs.po) by Miroslav Kure
  * French (fr.po) by Christian Perrier
  * Swedish (sv.po) by Daniel Nylander
  * Thai (th.po) by Theppitak Karoonboonyanan

 -- Jérémy Bobbio <lunar@debian.org>  Fri, 18 Apr 2008 18:10:50 +0200

partman-crypto (29) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Make partman-crypto-dm and parman-crypto-loop depends on the virtual
    cdebconf-entropy instead of cdebconf-newt-entropy to be independant of the
    frontend used.  Requires cdebconf-entropy (>= 0.7).
  * Add partman-crypto/entropy-success template which will be be displayed
    when enough entropy has been gathered.
  * Use the "entropy" question type instead of "entropy-text".
  * Substitute FIFO and SUCCESS variables before displaying
    partman-crypto/entropy.

  [ Updated translations ]
  * Amharic (am.po) by tegegne tefera
  * Arabic (ar.po) by Ossama M. Khayat
  * Bulgarian (bg.po)
  * Czech (cs.po) by Miroslav Kure
  * German (de.po) by Jens Seidel
  * Esperanto (eo.po) by Serge Leblanc
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * Basque (eu.po) by Piarres Beobide
  * Finnish (fi.po) by Esko Arajärvi
  * French (fr.po) by Christian Perrier
  * Galician (gl.po) by Jacobo Tarrio
  * Gujarati (gu.po) by Kartik Mistry
  * Japanese (ja.po) by Kenshi Muto
  * Korean (ko.po) by Changwoo Ryu
  * Lithuanian (lt.po) by Kęstutis Biliūnas
  * Marathi (mr.po)